--- a/gearset/main/default/classes/PassingTests.cls
+++ b/gearset/main/default/classes/PassingTests.cls
@@ -8,4 +8,8 @@ public class PassingTests {
     @isTest static void test2() {
         System.assertEquals(2, 2);
     }
+    
+    @isTest static void test3() {
+        System.assertEquals(3, 3);
+    }
 }
